--- a/web/sass/jamifind/_sidebar.scss
+++ b/web/sass/jamifind/_sidebar.scss
@@ -37,7 +37,7 @@
 		position: fixed;
 		top: 0px;
 		width: 160px;
-		z-index: 200;
+		z-index: 2000;
 
 		&:after {
 			@include transition(left 0.1s linear);
